--- a/src/Home/Solution.less
+++ b/src/Home/Solution.less
@@ -8,6 +8,7 @@
     // background-image: url('../img/07.jpg');
     // background-image: url('../img/08.jpg');
     // transition: .5s ease-in-out;
+    background-size:100%;
     background-color: #040227;
 
     .solution_wrap_content{
